# vbwd-plugin-dataset

./: CHANGELOG.md  README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
dataset/: constants.py  marketplace_listings.py  routes.py
dataset/handlers/: __init__.py  line_item_handler.py  one_time_payment_handler.py
dataset/models/: dataset.py  dataset_access_log.py  dataset_membership.py  dataset_plan.py  dataset_snapshot.py  dataset_snapshot_file.py  dataset_term.py
dataset/repositories/: dataset_access_log_repository.py  dataset_membership_repository.py  dataset_plan_repository.py  dataset_repository.py  dataset_snapshot_file_repository.py  dataset_snapshot_repository.py  dataset_term_repository.py
dataset/services/: dataset_access_service.py  dataset_entitlement_service.py  dataset_order_service.py  dataset_preview.py  dataset_service.py  dataset_taxonomy_service.py  entity_page_bridge.py  plugin_config.py  ports.py  scheduler.py  snapshot_file_service.py
docs/import/: README.md  cms_layouts.json  cms_posts.json  cms_widgets.json  push-data-store.sh
migrations/: __init__.py
migrations/versions/: 20260701_1000_dataset_tables.py  20260701_1100_dataset_term.py  20260701_1200_dataset_access.py  20260704_1000_dataset_vendor_id.py  20260707_1000_dataset_snapshot_file.py
tests/: conftest.py
tests/integration/: test_admin_dataset_preview.py  test_admin_datasets.py  test_admin_snapshot_file_download.py  test_admin_snapshot_files.py  test_admin_snapshot_rows.py  test_dataset_access_lifecycle.py  test_dataset_catalogue_public.py  test_dataset_custom_fields_tags.py  test_dataset_entity_page.py  test_dataset_exchange.py  test_dataset_one_time_order.py  test_dataset_plan_link.py  (+10 more)
(+29 files in other folders)
